# VeilPool

./: .env.example  .gitignore  Anchor.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  LICENSE  PRODUCTION_ROADMAP.md  README.md  docker-compose.prod.yml  docker-compose.yml  noDeSY6KxqUh27GUL3xjZsoQPwx68ZhambKnKMF9L7m.json  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  verify.sh
.github/workflows/: ci-cd.yml
app/: package.json  pnpm-lock.yaml
app/app/: layout.tsx  page.tsx
app/app/explorer/: page.tsx
app/app/node-operator/dashboard/: page.tsx
app/app/node-operator/register/: page.tsx
app/app/node-operator/settings/: page.tsx
app/components/: WalletContextProvider.tsx
app/lib/: store.ts
browser-extension/: README.md  background.js  manifest.json  popup.html  popup.js
programs/node-registry/: Cargo.toml
programs/node-registry/src/: lib.rs
programs/privacy-pass/: Cargo.toml
programs/privacy-pass/src/: lib.rs
programs/privacy-pool/: Cargo.toml
programs/privacy-pool/src/: lib.rs
programs/vrf-selection/: Cargo.toml
programs/vrf-selection/src/: lib.rs
routing-engine/: .env.development  .env.example  .env.production  .gitignore  Dockerfile  README.md  daemon.js  deploy.sh  package.json  pnpm-lock.yaml
routing-engine/scripts/: demo.sh  start-server.sh  test-api.sh
routing-engine/src/: connection-manager.ts  encryption.ts  error-handler.ts  index.ts  logger.ts  metrics.ts  node-monitor.js  node-monitor.ts  pyth-integration.js  pyth-integration.ts  rate-limiter.ts  redis-cache.ts  routing-engine.js  routing-engine.ts  types.ts
scripts/: deploy-production.sh  deploy.sh  status.sh  test-system.sh
sdk/: README.md  package.json  pnpm-lock.yaml
sdk/src/: index.js  index.ts  types.js  types.ts
tests/: .env.test  README.md  jest.config.js  node-registry.js  node-registry.test.js  node-registry.test.ts  node-registry.ts  package.json  pnpm-lock.yaml  privacy-pass.test.js  privacy-pass.test.ts  programs.test.js  programs.test.ts  routing-engine.test.js  routing-engine.test.ts  sdk.test.js  sdk.test.ts  setup.ts
(+6 files in other folders)
