[workspace]
members = [
    "programs/node-registry",
    "programs/privacy-pool",
    "programs/privacy-pass",
    "programs/vrf-selection"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
