[package]
name = "privacy-pass"
version = "0.1.0"
description = "VeilPool Privacy Pass - SPL token-based privacy pass system"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_pass"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
