[package]
name = "privacy-pool"
version = "0.1.0"
description = "VeilPool Privacy Pool - Sponsored privacy pools for communities"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "privacy_pool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
